--- a/branches/tos-tools-1-2-0-internal2/tools/tinyos/java/env/Makefile.am
+++ b/branches/tos-tools-1-2-0-internal2/tools/tinyos/java/env/Makefile.am
@@ -10,8 +10,8 @@ EXTRA_PROGRAMS = libgetenv.so getenv.dll
 
 libgetenv_so_SOURCES = net_tinyos_util_Env.h net_tinyos_util_Env.c
 
-libgetenv.so : net_tinyos_util_Env.h net_tinyos_util_Env.c
+libgetenv.so$(EXEEXT) : net_tinyos_util_Env.h net_tinyos_util_Env.c
 	gcc "-I$(JDK)/include/linux" "-I$(JDK)/include" -shared -fpic net_tinyos_util_Env.c -o$@
 
-getenv.dll: net_tinyos_util_Env.h net_tinyos_util_Env.c
+getenv.dll$(EXEEXT): net_tinyos_util_Env.h net_tinyos_util_Env.c
 	gcc -shared -o$@ -mno-cygwin "-I$(JDK)/include" "-I$(JDK)/include/win32" -D_JNI_IMPLEMENTATION net_tinyos_util_Env.c
